--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -4,18 +4,15 @@
 }
 
 html,
-body {
-  height: 100%;
-}
 
 body {
+    height: 100%;
   display: -ms-flexbox;
-
   -ms-flex-align: center;
   align-items: center;
-  padding-top: 40px;
-  padding-bottom: 40px;
-  background-color: #f5f5f5 !important;
+  /* padding-top: 40px;
+  padding-bottom: 40px; */
+  background-color: #f5f5f5;
 }
 
 .form-signin {
@@ -26,7 +23,9 @@ body {
   top: 50%;
   left: 50%;
   margin-right: -50%;
-  transform: translate(-50%, -50%)
+  transform: translate(-50%, -50%);
+  background-color: #f5f5f5;
+  box-shadow:  1px 1px 7px #888888;
 }
 
 .form-label-group {
